[tool.poetry]
name = "audio-split-helper"
version = "0.1.0"
description = ""
authors = ["Juhani Karppinen <juhani.k.karppinen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest"
test-cov = "pytest --cov=script"  # Runs tests with coverage
